  values for any argument.

  stat now outputs nanosecond information for time stamps even if
  they are out of localtime range.

  sort, tail, and uniq now support traditional usage like 'sort +2'
  and 'tail +10' on systems conforming to POSIX 1003.1-2008 and later.
  The 2008 edition of POSIX dropped the requirement that arguments
  like '+2' must be treated as file names.

** Improvements

  stat and tail now know about "prl_fs" (a parallels file system),
  "m1fs" (a Plexistor file system), "wslfs" (Windows Subsystem for Linux),
  and "smb2".  stat -f --format=%T now reports the file system type, and
  tail -f uses polling for "prl_fs" and "smb2", inotify for "m1fs",
  and attempts inotify for "wslfs".


* Noteworthy changes in release 8.25 (2016-01-20) [stable]

** Bug fixes

  cp now correctly copies files with a hole at the end of the file,
  and extents allocated beyond the apparent size of the file.
  That combination resulted in the trailing hole not being reproduced.
  [bug introduced in coreutils-8.10]

  cut --fields no longer outputs extraneous characters on some uClibc configs.
  [bug introduced in coreutils-6.11]

  install -D again copies relative file names when absolute file names
  are also specified along with an absolute destination directory name.
  [bug introduced in coreutils-6.2]

  ls no longer prematurely wraps lines when printing short file names.
  [bug introduced in coreutils-5.1.0]

  mv no longer causes data loss due to removing a source directory specified
  multiple times, when that directory is also specified as the destination.
  [bug introduced in coreutils-8.24]

  shred again uses defined patterns for all iteration counts.
  [bug introduced in coreutils-5.93]

  sort --debug -b now correctly marks the matching extents for keys
  that specify an offset for the first field.
  [bug introduced with the --debug feature in coreutils-8.6]

  tail -F now works with initially non existent files on a remote file system.