@@ -48,6 +48,8 @@ GNU coreutils NEWS                                    -*- outline -*-
 
 ** Improvements
 
+  install -Z now also sets the default SELinux context for created directories.
+
   stat and tail now know about "prl_fs" (a parallels file system),
   "m1fs" (a Plexistor file system), "wslfs" (Windows Subsystem for Linux),
   and "smb2".  stat -f --format=%T now reports the file system type, and
